{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "7f9f4e63-7e8a-4c3e-8e4b-7b8c9d5e2a3b",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "1f2a3b4c-5d6e-7f8g-9h0i-1j2k3l4m5n6o",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Attack01",
                    "type": "Button",
                    "id": "2a3b4c5d-6e7f-8g9h-0i1j-2k3l4m5n6o7p",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Attack02",
                    "type": "Button",
                    "id": "3b4c5d6e-7f8g-9h0i-1j2k-3l4m5n6o7p8q",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Attack03",
                    "type": "Button",
                    "id": "4c5d6e7f-8g9h-0i1j-2k3l-4m5n6o7p8q9r",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Attack04",
                    "type": "Button",
                    "id": "5d6e7f8g-9h0i-1j2k-3l4m-5n6o7p8q9r0s",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "6e7f8g9h-0i1j-2k3l-4m5n-6o7p8q9r0s1t",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "7f8g9h0i-1j2k-3l4m-5n6o-7p8q9r0s1t2u",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "8g9h0i1j-2k3l-4m5n-6o7p-8q9r0s1t2u3v",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "9h0i1j2k-3l4m-5n6o-7p8q-9r0s1t2u3v4w",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "0i1j2k3l-4m5n-6o7p-8q9r-0s1t2u3v4w5x",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "1j2k3l4m-5n6o-7p8q-9r0s-1t2u3v4w5x6y",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Arrow Keys",
                    "id": "2k3l4m5n-6o7p-8q9r-0s1t-2u3v4w5x6y7z",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "3l4m5n6o-7p8q-9r0s-1t2u-3v4w5x6y7z8a",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "4m5n6o7p-8q9r-0s1t-2u3v-4w5x6y7z8a9b",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "5n6o7p8q-9r0s-1t2u-3v4w-5x6y7z8a9b0c",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "6o7p8q9r-0s1t-2u3v-4w5x-6y7z8a9b0c1d",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "7p8q9r0s-1t2u-3v4w-5x6y-7z8a9b0c1d2e",
                    "path": "<Keyboard>/z",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack01",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8q9r0s1t-2u3v-4w5x-6y7z-8a9b0c1d2e3f",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack01",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9r0s1t2u-3v4w-5x6y-7z8a-9b0c1d2e3f4g",
                    "path": "<Keyboard>/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack02",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0s1t2u3v-4w5x-6y7z-8a9b-0c1d2e3f4g5h",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack02",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1t2u3v4w-5x6y-7z8a-9b0c-1d2e3f4g5h6i",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack03",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2u3v4w5x-6y7z-8a9b-0c1d-2e3f4g5h6i7j",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack03",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3v4w5x6y-7z8a-9b0c-1d2e-3f4g5h6i7j8k",
                    "path": "<Keyboard>/v",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack04",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4w5x6y7z-8a9b-0c1d-2e3f-4g5h6i7j8k9l",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack04",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5x6y7z8a-9b0c-1d2e-3f4g-5h6i7j8k9l0m",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}